# fastapi-service-skeleton

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
src/layered_myapp/: config.py  exception_handlers.py  logging.py  main.py
src/layered_myapp/api/: __init__.py  case.py  incident.py  router.py
src/layered_myapp/auth/: __init__.py  permissions.py  service.py
src/layered_myapp/caches/: case.py
src/layered_myapp/clients/: __init__.py  http.py  openai.py
src/layered_myapp/database/: core.py  deps.py
src/layered_myapp/events/: incident.py
src/layered_myapp/messaging/: case.py
src/layered_myapp/middleware/: __init__.py
src/layered_myapp/models/: case.py
src/layered_myapp/mq/: deps.py  producer.py  registry.py  topology.py
src/layered_myapp/redis/: __init__.py  client.py  deps.py
src/layered_myapp/repositories/: case.py  incident.py
src/layered_myapp/schemas/: incident.py
src/layered_myapp/services/: case.py  incident.py
src/layered_myapp/subsystems/: __init__.py
src/layered_myapp/tasks/: incident.py
src/modular_myapp/: api.py  config.py  exception_handlers.py  logging.py  main.py
src/modular_myapp/auth/: deps.py  models.py
src/modular_myapp/case/: messaging.py  redis.py  repository.py  tasks.py  views.py
src/modular_myapp/clients/: http.py  openai.py
src/modular_myapp/database/: __init__.py  core.py  deps.py
src/modular_myapp/incident/: __init__.py  repository.py  service.py
src/modular_myapp/middleware/: request_id.py
src/myapp/: __init__.py  api.py  exception_handlers.py  exceptions.py  logging.py  main.py
(+51 files in other folders)
