[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "0.1.0"
description = "A FastAPI backend skeleton."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modular_myapp", "src/layered_myapp"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "pyproject.toml",
    "src/modular_myapp",
    "src/layered_myapp",
]

[tool.uv]
dev-dependencies = []
